assets/css/prose.css
.prose blockquote {
  @apply py-2 border-x-0 my-6 pl-8 pr-0 py-4 sm:pr-4 border-y-2 border-fuchsia-500 bg-black relative;
}

.prose blockquote::before {
  @apply absolute left-2 text-fuchsia-500;

  content: ">";
}

.prose blockquote p {
  @apply relative text-neutral-200 my-4;
}

.prose ul li p {
  @apply my-0;
}

.prose blockquote p::before {
  content: "";
}

.prose blockquote p:first-of-type {
  @apply mt-0;
}

.prose blockquote p:last-of-type {
  @apply mb-0;
}

.prose blockquote p strong {
  @apply text-neutral-50;
}

.prose pre,
.prose code,
.prose kbd {
  @apply text-fuchsia-400 bg-fuchsia-950 py-[0.15rem] px-[0.3rem] font-mono;
}

.prose pre code {
  @apply px-0 bg-transparent;
}

.prose code code,
.prose kbd kbd {
  @apply p-0 m-0;
}

.prose code::before {
  content: "";
}

.prose code::after {
  content: "";
}

.prose a {
  @apply text-fuchsia-500 underline;
}

.prose a:hover {
  @apply text-fuchsia-300;
}

.prose ol {
  @apply pl-10 flex flex-col;
}

.prose ol li {
  @apply pl-0 my-1;
}

.prose ul li::marker {
  @apply text-fuchsia-500 font-bold;

  content: "-";
}

.prose ul li {
  @apply pl-3;
}

.prose ul li p:not(:first-of-type) {
  @apply mt-2;
}

.prose ol li::marker {
  @apply text-fuchsia-500 font-bold;
}

.prose table {
  @apply block bg-black border-2 border-fuchsia-700 border-collapse w-fit max-w-full mx-auto overflow-x-auto;
}

.prose table th {
  @apply bg-fuchsia-950/[0.5] text-fuchsia-600 font-bold border-r py-2 px-3;
}

.prose table th:last-of-type {
  @apply border-r-0;
}

.prose table td {
  @apply text-fuchsia-400 border-r py-2 px-3;
}

.prose table td:last-of-type {
  @apply border-r-0;
}

.prose table * {
  @apply border-fuchsia-900 border-dashed;
}

.prose .highlight {
  @apply mt-12 relative;
}

.prose samp pre {
  @apply flex rounded-none bg-black text-green-600 border border-green-800 px-4 pb-2 pt-5;
}

.prose .highlight pre,
.prose .highlight code {
  @apply text-fuchsia-500;
}

.prose .highlight > div {
  @apply border border-fuchsia-900 border-solid;
}

.prose .highlight > pre {
  @apply flex rounded-none mt-10 !bg-black border border-fuchsia-900;
}

/* highlight shortcode - line number (non-numbered and numbered parent) */
.prose .highlight code:not([data-lang]) > span {
  @apply pt-[3px] pb-[3.5px] !pl-4 pr-2;
}

/* highlight shortcode - line highlight number */
.prose .highlight code:not([data-lang]) > span > span {
  @apply !pl-0;
}

.prose .highlight table {
  @apply w-full;
}

.prose .highlight table code[data-lang] > span {
  @apply pr-4;
}

.prose .highlight table pre {
  @apply m-0 px-0 py-4 border-0;
}

.prose .highlight table code {
  @apply p-0;
}

.prose .highlight td:first-of-type pre {
  @apply mr-4;
}

.prose .mermaid {
  @apply bg-neutral-300 mx-auto;
}

